fix: harden gameplay authority and runtime bounds